--- a/src/main/webapp/css/custom.css
+++ b/src/main/webapp/css/custom.css
@@ -20,6 +20,7 @@ body {
 img.avatar {
     width: 22px;
     height: 22px;
+    object-fit: cover;
 }
 
 img.post {
@@ -28,20 +29,116 @@ img.post {
     max-width: 380px;
     max-height: 380px;
     float: left;
-    padding: 13px;
+    padding: 15px;
+    object-fit: cover;
 }
 
-img.post:HOVER {
-	opacity: 0.6;
-	cursor: pointer;
-	box-shadow: inset 0 0 70px 70px rgba(255, 255, 255, 0.5);
+img.post:not(.detais):HOVER {
+/* 	opacity: 0.8; */
+/* 	cursor: pointer; */
+	
+/* 	opacity: 0.1; */
+/*   background: rgba(0, 0, 0, 0.5); */
 }
 
-img.post.detais {
-    width: 700px;
+img.detais {
+    width: 730px;
     height: 600px;
-    max-width: 700px;
+    max-width: 730px;
     max-height: 600px;
     float: left;
-    padding: 13px;
+    object-fit: cover;
+}
+
+img.image-repo {
+    width: 250px;
+    height: 250px;
+    max-width: 250px;
+    max-height: 250px;
+/*     padding-right: 0px; */
+/*     margin-right: 15px; */
+    float: left;
+    object-fit: cover;
+}
+.comments-form {
+	max-height: 250px;
+	overflow-y: scroll;
+/* 	overflow-x: hidden; */
+}
+.row.comment {
+	max-width: 400px;
+	margin: 0px;
+}
+
+.image {
+    position:relative;
+    width: 380px;
+    height: 380px;
+    max-width: 380px;
+    max-height: 380px;
+    float: left;
+}
+
+.text {
+	/* left: 0;
+    position:absolute;
+    text-align:center;
+    top: 175px;
+    width: 100%; */
+	
+	position: absolute;
+	width: 350px;
+	height: 350px;
+	text-align: center;
+	background-color: rgba(0, 0, 0, 0.7);
+	opacity: 0;
+	-webkit-transition: opacity 0.3s;
+	-moz-transition: opacity 0.3s;
+	transition: opacity 0.3s;
+	vertical-align: middle;
+	line-height: 350px;
+	margin: 15px;
+}
+
+.text:HOVER {
+    opacity: 1;
+}
+
+.text.hidden {
+	visibility: hidden;
+}
+
+span.liked {
+    padding-right: 10px;
+}
+
+i.liked {
+    font-size: 18px;
+    color: #337ab7;
+}
+
+i.disliked {
+    font-size: 18px;
+    color: #f7640b;
+}
+
+i.liked {
+    font-size: 18px;
+    color: #337ab7;
+}
+
+i.main {
+    color: #ffffff;
+    font-size: 30px
+}
+
+span.main {
+    color: #ffffff;
+    font-size: 25px;
+    margin-left: 2px;
+}
+
+span.liked.main {
+    padding-right: 30px;
+    
 }
