--- a/src/main/webapp/partials/register.html
+++ b/src/main/webapp/partials/register.html
@@ -52,10 +52,10 @@
 				<label for="country" class="col-sm-4 control-label">Country:</label>
 				<div class="col-sm-8">
 					<select  id="country" ng-model="country"  class="form-control">
-						<option value="volvo">Volvo</option>
-						<option value="saab">Saab</option>
-						<option value="opel">Opel</option>
-						<option value="audi">Audi</option>
+						<option value="Vietnam">Vietnam</option>
+						<option value="US">US</option>
+						<option value="UK">UK</option>
+						<option value="Singapore">Singapore</option>
 					</select>
 				</div>
 			</div>
