--- a/src/main/webapp/css/custom.css
+++ b/src/main/webapp/css/custom.css
@@ -33,14 +33,6 @@ img.post {
     object-fit: cover;
 }
 
-img.post:not(.detais):HOVER {
-/* 	opacity: 0.8; */
-/* 	cursor: pointer; */
-	
-/* 	opacity: 0.1; */
-/*   background: rgba(0, 0, 0, 0.5); */
-}
-
 img.detais {
     width: 730px;
     height: 600px;
@@ -55,15 +47,13 @@ img.image-repo {
     height: 250px;
     max-width: 250px;
     max-height: 250px;
-/*     padding-right: 0px; */
-/*     margin-right: 15px; */
     float: left;
     object-fit: cover;
 }
 .comments-form {
 	max-height: 250px;
-	overflow-y: scroll;
-/* 	overflow-x: hidden; */
+	min-height: 250px;
+	overflow-y: auto;
 }
 .row.comment {
 	max-width: 400px;
@@ -79,13 +69,7 @@ img.image-repo {
     float: left;
 }
 
-.text {
-	/* left: 0;
-    position:absolute;
-    text-align:center;
-    top: 175px;
-    width: 100%; */
-	
+.text {	
 	position: absolute;
 	width: 350px;
 	height: 350px;
@@ -115,11 +99,13 @@ span.liked {
 i.liked {
     font-size: 18px;
     color: #337ab7;
+    cursor: pointer;
 }
 
 i.disliked {
     font-size: 18px;
     color: #f7640b;
+    cursor: pointer;
 }
 
 i.liked {
@@ -141,4 +127,23 @@ span.main {
 span.liked.main {
     padding-right: 30px;
     
+}
+
+.row.main {
+    padding-top: 15px;
+}
+
+.pull-right.delete {
+	margin-right: 10px;
+}
+
+input[type="checkbox"].userRepo{
+  width: 15px;
+  height: 15px;
+  cursor: pointer;
+}
+
+textarea#comment {
+    max-width: 380px;
+    max-height: 60px;
 }
