--- a/src/main/webapp/partials/userRepository.html
+++ b/src/main/webapp/partials/userRepository.html
@@ -1,77 +1,46 @@
 <div class="pull-right">
-	<a href="#!/uploadImage" class="btn btn-default" ng-show="hasRole('ROLE_ADMIN')" title="Upload"><span class="fa fa-upload"></span></a>
+	<a href="#!/uploadImage" class="btn btn-primary" title="Upload"><span class="fa fa-upload"></span></a>
 </div>
+
+<div class="pull-right delete">
+	<a href="" ng-click="deletePosts()" class="btn btn-danger" title="Delete"><span class="fa fa-trash-o"></span></a>
+</div>
+
 <div class="page-header">
 	<h3>User Repository</h3>
 </div>
 
 <div ng-repeat="post in posts">
-<!-- 	<div class="list-img"> -->
-		<div class="row list-img">
-			<div class="col-md-3">
+	<div class="row">
+		<div class="col-md-3">
+			<input class="userRepo" type="checkbox" ng-model="post.post.selected" value={{post.post.id}}>
 				<img class="image-repo" ng-src="{{post.post.link}}">
-			</div>
-			
-			<div class="col-md-2">
-				<h4 class="row">{{post.post.date | date}}</h4>
-				<p class="row">{{post.post.description}}</p>
-			</div>
-			
-			<!-- comment zone-->
-			<div class="col-md-7 comments-form">
-				<div class="row comment">
-					<p class="row comment">{{post.post.category}}</p>
-					<p class="row comment">{{post.post.date | date}}</p>
-					<p class="row comment">{{post.post.description}}</p>
-				</div>
-				<hr />
-				
-				<div class="row comment">
-					<p class="row comment">{{post.post.category}}</p>
-					<p class="row comment">{{post.post.date | date}}</p>
-					<p class="row comment">{{post.post.description}}</p>
-				</div>
-				<hr />
-				
-				<div class="row comment">
-					<p class="row comment">{{post.post.category}}</p>
-					<p class="row comment">{{post.post.date | date}}</p>
-					<p class="row comment">{{post.post.description}}</p>
-				</div>
-				<hr />
-				
-				<div class="row comment">
-					<p class="row comment">{{post.post.category}}</p>
-					<p class="row comment">{{post.post.date | date}}</p>
-					<p class="row comment">{{post.post.description}}</p>
-				</div>
-				<hr />
-			</div>
-			<!-- end comment zone-->
+			</input>
 		</div>
-		<hr />
 		
-<!-- 	</div> -->
-</div>
-
-
-
-
-<!-- <div ng-repeat="comments in posts">
-		<p>{{comments[0].username}}</p>
-		<p>{{comments.date | date}}</p>
-		<p>{{comments.content}}</p>
+		<div class="col-md-2">
+			<h4 class="row">{{post.post.date | date}}</h4>
+			<p class="row">{{post.post.description}}</p>
+		</div>
+		
+		<!-- comment zone-->
+		<div class="col-md-7 comments-form">
+			<div ng-repeat="comment in post.comments">
+				<div class="row comment">
+					<div class="col-md-4">
+						<b class="row comment">{{comment.username}}</b>
+						<p class="row comment">{{comment.date | date}}</p>
+					</div>
+					
+					<div class="col-md-8">
+						<p class="row comment">{{comment.content}}</p>
+					</div>
+				</div>
+				<hr />
+			</div>
+		</div>
+		<!-- end comment zone-->
 	</div>
-
-<div ng-repeat="blogPost in blogPosts">
 	<hr />
-	<div class="pull-right">
-		<a href="" ng-click="deletePost(blogPost)" class="btn btn-xs btn-default" ng-show="hasRole('ROLE_ADMIN')"
-		   title="delete"><span class="fa fa-trash-o"></span></a>
-		<a href="#!/edit/{{blogPost.id}}" class="btn btn-xs btn-default" ng-show="hasRole('ROLE_ADMIN')"
-		   title="edit"><span class="fa fa-pencil"></span></a>
-	</div>
-	<h4>{{blogPost.date | date}}</h4>
-	<p>{{blogPost.content}}</p>
+		
 </div>
-<hr /> -->
