--- a/src/main/webapp/partials/register.html
+++ b/src/main/webapp/partials/register.html
@@ -51,12 +51,18 @@
 			<div class="form-group">
 				<label for="country" class="col-sm-4 control-label">Country:</label>
 				<div class="col-sm-8">
-					<select  id="country" ng-model="country"  class="form-control">
+					<!-- <select  id="country" ng-model="country"  class="form-control">
 						<option value="Vietnam">Vietnam</option>
 						<option value="US">US</option>
 						<option value="UK">UK</option>
 						<option value="Singapore">Singapore</option>
+					</select> -->
+					
+					<select id="imageCategories" ng-model="country"  
+						class="form-control" ng-options="country.countryName for country in countries">
+							<option value="">Select Country</option>
 					</select>
+					
 				</div>
 			</div>
 			
