get user from back end when jump into user details

--- a/src/main/webapp/partials/register.html
+++ b/src/main/webapp/partials/register.html
@@ -59,7 +59,7 @@
 					</select> -->
 					
 					<select id="imageCategories" ng-model="country"  
-						class="form-control" ng-options="country.countryName for country in countries">
+						class="form-control" ng-options="country.countryName as country.countryName for country in countries">
 							<option value="">Select Country</option>
 					</select>
 					
