--- a/src/main/webapp/css/custom.css
+++ b/src/main/webapp/css/custom.css
@@ -17,6 +17,15 @@ body {
 	margin: auto;
 }
 
+nav.navbar.navbar-fixed-top.navbar-default {
+    background-color: #d8d8d8;
+    border-color: #d7d7d7;
+}
+
+a.navbar-brand {
+    font-weight: bold;
+}
+
 img.avatar {
     width: 22px;
     height: 22px;
@@ -33,26 +42,33 @@ img.post {
     object-fit: cover;
 }
 
-img.detais {
-    width: 730px;
-    height: 600px;
-    max-width: 730px;
-    max-height: 600px;
+div.image-detais {
+    width: 100%;
+    max-width: 100%;
+    float: left;
+    object-fit: cover;
+}
+
+img.image-detais {
+    width: 97%;
+    max-width: 97%;
+    height: 100%;
+    max-height: 100%;
     float: left;
     object-fit: cover;
 }
 
 img.image-repo {
-    width: 250px;
-    height: 250px;
-    max-width: 250px;
-    max-height: 250px;
+    width: 90%;
+    height: 90%;
+    max-width: 90%;
+    max-height: 90%;
     float: left;
     object-fit: cover;
 }
 .comments-form {
-	max-height: 250px;
-	min-height: 250px;
+	max-height: 200px;
+	min-height: 100%;
 	overflow-y: auto;
 }
 .row.comment {
@@ -137,13 +153,32 @@ span.liked.main {
 	margin-right: 10px;
 }
 
-input[type="checkbox"].userRepo{
-  width: 15px;
-  height: 15px;
-  cursor: pointer;
+input[type="checkbox"].userRepo {
+	width: 15px;
+	height: 15px;
+	cursor: pointer;
+	float: left;
+	margin-right: 5px;
+	margin-top: 0px;
+	
+	/* width: 18px;
+    height: 18px;
+    cursor: pointer;
+    float: left;
+    margin-right: 5px;
+    margin-top: 0px;
+    position: absolute;
+    top: 5px;
+    left: 20px; */
 }
 
 textarea#comment {
     max-width: 380px;
     max-height: 60px;
+}
+
+div.image-row {
+	height: 200px;
+	max-height: 200px;
+	min-height: 200px;
 }
