--- a/src/main/webapp/css/custom.css
+++ b/src/main/webapp/css/custom.css
@@ -18,8 +18,8 @@ body {
 }
 
 nav.navbar.navbar-fixed-top.navbar-default {
-    background-color: #d8d8d8;
-    border-color: #d7d7d7;
+    background-color: #e8e7e7;
+    border-color: #edf1f1;
 }
 
 a.navbar-brand {
@@ -160,25 +160,25 @@ input[type="checkbox"].userRepo {
 	float: left;
 	margin-right: 5px;
 	margin-top: 0px;
-	
-	/* width: 18px;
-    height: 18px;
-    cursor: pointer;
-    float: left;
-    margin-right: 5px;
-    margin-top: 0px;
-    position: absolute;
-    top: 5px;
-    left: 20px; */
 }
 
 textarea#comment {
+	min-width: 380px;
+    min-height: 60px;
     max-width: 380px;
-    max-height: 60px;
+    max-height: 100px;
 }
 
 div.image-row {
 	height: 200px;
 	max-height: 200px;
 	min-height: 200px;
+}
+
+.form-group.uploadBy {
+    margin-bottom: 0px;
+}
+
+.commentRow {
+    padding-left: 0px;
 }
