--- a/src/main/webapp/partials/userRepository.html
+++ b/src/main/webapp/partials/userRepository.html
@@ -10,6 +10,10 @@
 	<h3>User Repository</h3>
 </div>
 
+<div>
+	<h4 ng-show="userNotHaveImage">User have no image</h4>
+</div>
+
 <div ng-repeat="post in posts">
 	<div class="row">
 		<div class="col-md-3 image-row">
