--- a/src/main/webapp/partials/userRepository.html
+++ b/src/main/webapp/partials/userRepository.html
@@ -31,12 +31,16 @@
 		<div class="col-md-7 comments-form">
 			<div ng-repeat="comment in post.comments">
 				<div class="row comment">
+					<div class="col-sm-1 commentRow">
+							<img class="avatarComment img-circle" ng-src="{{comment.avatar}}">
+						</div>
+					
 					<div class="col-md-4">
 						<b class="row comment">{{comment.username}}</b>
 						<p class="row comment">{{comment.date | date}}</p>
 					</div>
 					
-					<div class="col-md-8">
+					<div class="col-md-7">
 						<p class="row comment">{{comment.content}}</p>
 					</div>
 				</div>
